Added html code for Resume

--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-<h1>This is the Index page</h1>
+<html>
+	<head>
+		<title>Ankur Heble - Software Developer</title>
+		<meta name="description" content="Web and Software Developer">
+		<meta name="author" content="Ankur Heble">
+		<link rel="canonical" href="https://ankurheble.github.io/my-website/">
+		<link rel="stylesheet" href="index.css">
+		<!-- Cutom Fonts -->
+		<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+		<link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+		
+		<!-- Icons -->		
+		<link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16">
+	</head>
+	<body id="page-top" class="index">
+		<!-- Navigation -->
+		 <div class="nav">
+		  <ul>
+			<li class="brand"><a href="#page-top">Ankur Heble</a></li>
+			<li><a href="#skills">Skills</a></li>
+			<li><a href="#exp">Experience</a></li>
+			<li><a href="#projects">Projects</a></li>
+			<li><a href="#about">About</a></li>
+		  </ul>
+		</div>
+		<!-- Main Div -->
+		<div class="main">
+			<!-- home -->
+			<div class="dark-theme">
+				<h2>FULL STACK DEVELOPER</h2>
+				<p>
+					2.5 years of experience in Software development, Java, Springs, Struts, Hibernate and Oracle and seeking assignment with an IT Organisation where I am able to contribute to the organization's growth and profitability with my skill and in turn get an opportunity to gain exposure and expertise that would help me to build a strong and successful career.
+				</p>
+			</div>
+			<!-- skills -->
+			<div id="skills" class="light-theme">
+				<h2>SKILLS<h2>
+				<table>
+					<th><th>
+					<tr></tr>
+				</table>
+			</div>
+			<!-- experience -->
+			<div id="exp" class="dark-theme">
+			</div>
+			<!-- projects -->
+			<div id="projects" class="light-theme">
+			</div>
+			<!-- about -->
+			<div id="about" class="dark-theme">
+			</div>
+		</div>
+	</body>
+</html>
