--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta name="description" content="Web and Software Developer">
 		<meta name="author" content="Ankur Heble">
 		<link rel="canonical" href="https://ankurheble.github.io/my-website/">
-		<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" href="css/index.css">
 		<!-- Cutom Fonts -->
-		<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-		<link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 		
 		<!-- Icons -->		
 		<link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
