--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 		<title>Ankur Heble - Software Developer</title>
 		<meta name="description" content="Web and Software Developer">
 		<meta name="author" content="Ankur Heble">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="canonical" href="https://ankurheble.github.io/my-website/">
-		<link rel="stylesheet" href="css/index.css">
+		<link rel="stylesheet" href="css/index.min.css">
+		<link rel="stylesheet" href="css/styles.css">
 		<!-- Cutom Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -14,42 +16,163 @@
 		<link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16">
 	</head>
 	<body id="page-top" class="index">
-		<!-- Navigation -->
-		 <div class="nav">
-		  <ul>
-			<li class="brand"><a href="#page-top">Ankur Heble</a></li>
-			<li><a href="#skills">Skills</a></li>
-			<li><a href="#exp">Experience</a></li>
-			<li><a href="#projects">Projects</a></li>
-			<li><a href="#about">About</a></li>
-		  </ul>
+		<div class="container-fluid">
+			<!-- Navigation -->
+			 <div class="navbar navbar-default navbar-fixed-top nav">
+			  <ul>
+				<li class="brand"><a href="#page-top">Ankur Heble</a></li>
+				<li><a href="#skills">Skills</a></li>
+				<li><a href="#exp">Experience</a></li>
+				<li><a href="#projects">Projects</a></li>
+				<li><a href="#about">About</a></li>
+			  </ul>
+			</div>
 		</div>
-		<!-- Main Div -->
-		<div class="main">
-			<!-- home -->
-			<div class="dark-theme">
+		<div class="container-fluid">
+			<!-- Main Div -->
+			<div class="main">
+				<!-- home -->
+				<div class="dark-theme">
+				<br><br><br>
 				<h2>FULL STACK DEVELOPER</h2>
-				<p>
-					2.5 years of experience in Software development, Java, Springs, Struts, Hibernate and Oracle and seeking assignment with an IT Organisation where I am able to contribute to the organization's growth and profitability with my skill and in turn get an opportunity to gain exposure and expertise that would help me to build a strong and successful career.
-				</p>
+					<p>
+						2.5 years of experience in Software development, Java, Springs, Struts, Hibernate and Oracle and seeking assignment with an IT Organisation where I am able to contribute to the organization's growth and profitability with my skill and in turn get an opportunity to gain exposure and expertise that would help me to build a strong and successful career.
+					</p>
+				</div>
+				<!-- skills -->
+				<div id="skills" class="light-theme">
+					<h2>SKILLS</h2>
+					<table class="table">
+						<thead>
+							<th></th>
+							<th>Skills</th>
+							<th>Experience (in years)</th>
+						</thead>
+						<tbody>
+							<tr>
+							  <td><img src="http://icons.iconarchive.com/icons/tatice/cristal-intense/32/Java-icon.png" alt="Java"/></td>
+							  <td>Java 1.7</td>
+							  <td>2.5</td>
+							</tr>
+							<tr>
+							  <td><img src="http://icons.iconarchive.com/icons/graphics-vibe/developer/32/javascript-icon.png" alt="JavaScript"/></td>
+							  <td>JavaScript ES15</td>
+							  <td>1.5</td>
+							</tr>
+							<tr>
+							  <td><img src="http://icons.iconarchive.com/icons/cornmanthe3rd/plex/32/Other-html-5-icon.png" alt="HTML5"/></td>
+							  <td>HTML 5</td>
+							  <td>0-1</td>
+							</tr>
+							<tr>
+							  <td><img src="http://icons.iconarchive.com/icons/graphics-vibe/developer/32/css-icon.png" alt="CSS3"/></td>
+							  <td>CSS 3</td>
+							  <td>0-1</td>
+							</tr>
+							<tr>
+							  <td><img src="http://icons.iconarchive.com/icons/icons8/windows-8/32/Database-icon.png" alt="DB"/></td>
+							  <td>Oracle Database 12c</td>
+							  <td>2</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<!-- experience -->
+				<div id="exp" class="dark-theme">
+					<h2>EXPERIENCE</h2>
+					<table class="table">
+						<p>
+							<thead>
+								<th>Position</th>
+								<th>Company</th>
+								<th>Duration (In Years)</th>
+							</thead>
+							<tbody>
+								<tr>
+									<td>Associate Software Engineer</td>
+									<td>Aris Global Software Pvt Ltd.</td>
+									<td>1</td>
+								</tr>
+								<tr>
+									<td>Software Engineer</td>
+									<td>Aris Global Software Pvt Ltd.</td>
+									<td>1.5</td>
+								</tr>
+								<tr>
+									<td>Senior Software Engineer</td>
+									<td>Mindtree Ltd.</td>
+									<td>0.7</td>
+								</tr>
+							</tbody>
+						</p>
+					</table>
+				</div>
+				<!-- projects -->
+				<div id="projects" class="light-theme">
+					<h2>PROJECTS</h2>
+					<table class="table">
+						<thead>
+							<th>Project Name</th>
+							<th>Project Duration</th>
+							<th>Team Size</th>
+							<th>Company</th>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Unilever T2</td>
+								<td>June-18 Till Present</td>
+								<td>6-8</td>
+								<td>Mindtree Ltd.</td>
+							</tr>
+							<tr>
+								<td>LS RIMS 3.1</td>
+								<td>Sep-16 to Dec-17</td>
+								<td>6</td>
+								<td>Aris Gloal Software Pvt Ltd.</td>
+							</tr>
+							<tr>
+								<td>agIDMP 2.0</td>
+								<td>Dec-15 to Sep-16</td>
+								<td>6</td>
+								<td>Aris Gloal Software Pvt Ltd.</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<!-- about -->
+				<div id="about" class="dark-theme">
+				<h2>ABOUT ME</h2>
+					<h3>Achievements</h3>
+					<center><p>Awarded Team Spot Award for Positive work culture within 6 months of joining Aris Global in May 2016</p></center>
+					<h3>Education</h3>
+					<p>
+						<table class="table">
+							<thead>
+								<th>Year</th>
+								<th>Degree</th>
+								<th>Institution</th>
+							</thead>
+							<tbody>
+								<tr>
+									<td>2015</td>
+									<td>Bachelor of Engineering In Computer Science</td>
+									<td>Govt. S.K.S.J.T.I</td>
+								</tr>
+								<tr>
+									<td>2009</td>
+									<td>Class XII(PUC Board)</td>
+									<td>B.S.R.N.S Vidyaniketan</td>
+								</tr>
+								<tr>
+									<td>2007</td>
+									<td>Class X(CBSE)</td>
+									<td>Vidyaniketan Public School</td>
+								</tr>
+							</tbody>
+						</table>
+					</p>
+				</div>
 			</div>
-			<!-- skills -->
-			<div id="skills" class="light-theme">
-				<h2>SKILLS<h2>
-				<table>
-					<th><th>
-					<tr></tr>
-				</table>
-			</div>
-			<!-- experience -->
-			<div id="exp" class="dark-theme">
-			</div>
-			<!-- projects -->
-			<div id="projects" class="light-theme">
-			</div>
-			<!-- about -->
-			<div id="about" class="dark-theme">
-			</div>
-		</div>
+		<div>
 	</body>
 </html>
